XFIRE-373 - resolve files relative to the webapp XFIRE-378 - fix handling of base64Binary with linebreaks. This takes more memory now, but at least it works. XFIRE-379 - pay attention to the @WebService.wsdlLocation attribute
Also fix bug in DOMStreamReader

git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@1541 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba